Remove bower, migrate to yarn

--- a/src/just-il/just-il.Web/Content/Sass/bootstrap/bootstrap.scss
+++ b/src/just-il/just-il.Web/Content/Sass/bootstrap/bootstrap.scss
@@ -1,4 +1,4 @@
-@import 'bower_components/bootstrap-sass/assets/stylesheets/_bootstrap-compass';
-@import 'bower_components/bootstrap-sass/assets/stylesheets/_bootstrap-mincer';
-@import 'bower_components/bootstrap-sass/assets/stylesheets/_bootstrap-sprockets';
-@import 'bower_components/bootstrap-sass/assets/stylesheets/_bootstrap';
+@import 'node_modules/@bower_components/bootstrap-sass/assets/stylesheets/_bootstrap-compass';
+@import 'node_modules/@bower_components/bootstrap-sass/assets/stylesheets/_bootstrap-mincer';
+@import 'node_modules/@bower_components/bootstrap-sass/assets/stylesheets/_bootstrap-sprockets';
+@import 'node_modules/@bower_components/bootstrap-sass/assets/stylesheets/_bootstrap';
