--- a/src/just-il/just-il.Web/Content/Sass/_variables.scss
+++ b/src/just-il/just-il.Web/Content/Sass/_variables.scss
@@ -9,6 +9,9 @@ $color-gray-light: #ebebeb;
 $color-gray-medium: #999;
 $color-gray-dark: #404040;
 
+$color-primary: #0E754A;
+$color-secondary: #FFBB00;
+
 
 $color-black-tr05: rgba(0,0,0,0.05);
 $color-black-tr10: rgba(0,0,0,0.10);
