--- a/src/just-il/just-il.Web/Content/Sass/_critical-navigation.scss
+++ b/src/just-il/just-il.Web/Content/Sass/_critical-navigation.scss
@@ -104,19 +104,20 @@
 	}
 }
 
-.navigation{
+.navigation {
 
-	&-main{
-		flex: 1 1 auto;
-		margin-bottom: 0.5rem;
-	}
+    &-main {
+        flex: 1 1 auto;
+        margin-bottom: 0.5rem;
+    }
 
-	&-service{
-		position: absolute;
-		right:0;
-		top: 0.5rem;
-		flex: none;
-	}
+    &-service {
+        position: absolute;
+        right: 0;
+        top: 0.5rem;
+        flex: none;
+        font-size: 0.8rem;
+    }
 }
 
 .breadcrumb-item{
