--- a/src/just-il/just-il.Web/Views/MasterLayout.cshtml
+++ b/src/just-il/just-il.Web/Views/MasterLayout.cshtml
@@ -24,7 +24,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Effera startpoint</title>
+    <title>Just I.L.</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <meta name="ua" content="@userAgent" />
     <link rel="apple-touch-icon" sizes="57x57" href="/apple-icon-57x57.png">
