Adjust fonts. Fix some paths

--- a/src/just-il/just-il.Web/Content/Sass/_variables.scss
+++ b/src/just-il/just-il.Web/Content/Sass/_variables.scss
@@ -32,8 +32,8 @@ $color-white-tr80: rgba(255,255,255,0.80);
 $color-white-tr90: rgba(255,255,255,0.90);
 $color-white-tr95: rgba(255,255,255,0.95);
 
-$font-family-serif: 'Droid Serif' ,'Times New Roman', Times, serif;
-$font-family-sans: 'Ubuntu', Arial, Helvetica, sans;
+$font-family-serif: 'Merriweather' ,'Times New Roman', Times, serif;
+$font-family-sans: 'Blinker', Arial, Helvetica, sans;
 
 
 $icon-ef-home: "\e900";
