--- a/src/just-il/just-il.Web/Content/Sass/_general-styles.scss
+++ b/src/just-il/just-il.Web/Content/Sass/_general-styles.scss
@@ -214,6 +214,10 @@
 		margin-right: -1rem;
 		width: 100%;
 
+        .label {
+            padding-left: 0;
+        }
+
 		& > .list-item{
 			@include flex(1,1,auto);
 			@include display-flex;
