--- a/src/just-il/just-il.Web/Views/Partials/_PageOpenGraphTags.cshtml
+++ b/src/just-il/just-il.Web/Views/Partials/_PageOpenGraphTags.cshtml
@@ -16,7 +16,7 @@
 <meta property="og:title" content="@metaTitle" />
 <meta property="og:description" content="@ogDescription" />
 <meta property="og:url" content="@Request.Url" />
-<meta property="og:site_name" content="@Umbraco.GetDictionaryValue("label.SiteName", "strai.no")"/>
+<meta property="og:site_name" content="@Umbraco.GetDictionaryValue("label.SiteName", "justil.no")"/>
 @if (ogImage != string.Empty)
 {
 	<meta property="og:image" content="@ogImage" />
